# sqlreduce

./: .gitignore  LICENSE  README.md  setup.cfg  sqlreduce  sqlreduce.py  test_sqlreduce.py
.github/workflows/: ci.yml
debian/: changelog  clean  control  copyright  py3dist-overrides  rules  sqlreduce.manpages  watch
debian/source/: options
debian/tests/: control  sqlreduce
docs/: howitworks-de.md  howitworks.md  sqlreduce.1
examples/: examples.md  pg-build.sh  q1  q2  q3  q4  q5  q6  q7  smith1  smith2  smith3  smith4  smith5  smith6
media/: sqlreduce-pgconf-2022-05-en.md  sqlreduce-pgconf-2022-05.md  sqlreduce-screencast.sql
sqlreduce/: __init__.py  main.py
tests/: test_sqlreduce.py
