[metadata]
name = sqlreduce
version = 1.0
author = Christoph Berg
author_email = christoph.berg@credativ.de
description = Reduce verbose SQL queries to minimal examples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/credativ/sqlreduce
project_urls =
    Bug Tracker = https://github.com/credativ/sqlreduce/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = sqlreduce
python_requires = >=3.8
install_requires =
    pglast
    psycopg2
    PyYAML

[options.entry_points]
console_scripts =
    sqlreduce = sqlreduce.main:sqlreduce_main
